# physics

./: .gitignore  CMakeLists.txt  README.md  kernels.cuh  main.cu  program.cuh  settings.cuh  viewport.cu  viewport.cuh
programs/basic/: basic.cu  basic.cuh
programs/particles/: particles.cu  particles.cuh
utils/: float3.cuh  rng.cuh
